--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -52,7 +52,7 @@ body {
 .text::after {
     content: "";
     width: 1px;
-    height: 10px;
+    height: 22px;
     position: absolute;
     top: 0;
     right: 0;
@@ -139,6 +139,7 @@ body {
     top: 20px;
     right: 20px;
 
+    font-size: 1.8rem;
     color: #fff;
     cursor: pointer;
     user-select: none;
